# holbertonschool-interview

./: CMakeLists.txt  README.md
0x01-insert_in_sorted_linked_list/: 0-insert_number.c  lists.h  main.c
